@startuml

title __GRAPHIC's Class Diagram__\n

  namespace  {
    namespace om.example.competenciesForStudents {
      class com.example.competenciesForStudents.Charts {
      }
    }
  }
  

  namespace  {
    namespace om.example.competenciesForStudents {
      interface com.example.competenciesForStudents.InterfaceDB {
      }
    }
  }
  

  namespace  {
    namespace om.example.competenciesForStudents {
      class com.example.competenciesForStudents.InterfaceDBImpliment {
      }
    }
  }
  

  namespace  {
    namespace om.example.competenciesForStudents {
      class com.example.competenciesForStudents.MainController {
      }
    }
  }
  

  namespace  {
    namespace om.example.competenciesForStudents {
      class com.example.competenciesForStudents.PrintCharts {
      }
    }
  }
  

  namespace  {
    namespace om.example.competenciesForStudents {
      class com.example.competenciesForStudents.StartProgram {
      }
    }
  }
  

  namespace  {
    namespace om.example.competenciesForStudents {
      class com.example.competenciesForStudents.StrDB {
      }
    }
  }
  

  com.example.competenciesForStudents.InterfaceDBImpliment .up.|> com.example.competenciesForStudents.InterfaceDB
  com.example.competenciesForStudents.MainController .up.|> javafx.fxml.Initializable
  com.example.competenciesForStudents.MainController o-- com.example.competenciesForStudents.InterfaceDB : interfaceDB
  com.example.competenciesForStudents.MainController o-- com.example.competenciesForStudents.StrDB : strDBAdd
  com.example.competenciesForStudents.PrintCharts .up.|> java.awt.print.Printable
  com.example.competenciesForStudents.StartProgram -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
